--- a/weblog/weblog.csproj
+++ b/weblog/weblog.csproj
@@ -11,7 +11,10 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.0-rc1.final" />
+      <PackageReference Include="PusherServer" Version="4.2.0" />
+      <PackageReference Include="WebSocket4Net" Version="0.15.2" />
     </ItemGroup>
     <ItemGroup>
         <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.3" />
