--- a/weblog/weblog.csproj
+++ b/weblog/weblog.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <PackageReference Include="EntityFramework" Version="6.4.0" />
+      <PackageReference Include="MailKit" Version="2.4.1" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="3.1.0" />
